fixing content align

--- a/css/masonstang.css
+++ b/css/masonstang.css
@@ -1093,6 +1093,7 @@ body {
   color: var(--white-text);
   margin-bottom: 35px;
   margin-top: 35px;
+  justify-content: center;
 }
 #my-interests-intro {
   color: var(--white-text);
